[package]
name = "auto-clicker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14" # Will help us click on the screen
inputbot = "0.5.0" # Will help us to listen to keyboard presses globally